--- a/config/install/responsive_image.styles.d11.yml
+++ b/config/install/responsive_image.styles.d11.yml
@@ -9,19 +9,19 @@ id: d11
 label: 'Display 11 responsive auto'
 image_style_mappings:
   -
-    breakpoint_id: fast_responsive_image.screen-xs-max
+    breakpoint_id: media_entity_responsive_image.screen-xs-max
     multiplier: 1x
     image_mapping_type: image_style
     image_mapping: d8
   -
-    breakpoint_id: fast_responsive_image.screen-sm-min
+    breakpoint_id: media_entity_responsive_image.screen-sm-min
     multiplier: 1x
     image_mapping_type: image_style
     image_mapping: d10
   -
-    breakpoint_id: fast_responsive_image.screen-md-min
+    breakpoint_id: media_entity_responsive_image.screen-md-min
     multiplier: 1x
     image_mapping_type: image_style
     image_mapping: d11
-breakpoint_group: fast_responsive_image
+breakpoint_group: media_entity_responsive_image
 fallback_image_style: d8
