--- a/config/install/responsive_image.styles.d11_standard.yml
+++ b/config/install/responsive_image.styles.d11_standard.yml
@@ -9,19 +9,19 @@ id: d11_standard
 label: 'Display 11 responsive standard 16:9'
 image_style_mappings:
   -
-    breakpoint_id: fast_responsive_image.screen-xs-max
+    breakpoint_id: media_entity_responsive_image.screen-xs-max
     multiplier: 1x
     image_mapping_type: image_style
     image_mapping: d8_standard
   -
-    breakpoint_id: fast_responsive_image.screen-sm-min
+    breakpoint_id: media_entity_responsive_image.screen-sm-min
     multiplier: 1x
     image_mapping_type: image_style
     image_mapping: d10_standard
   -
-    breakpoint_id: fast_responsive_image.screen-md-min
+    breakpoint_id: media_entity_responsive_image.screen-md-min
     multiplier: 1x
     image_mapping_type: image_style
     image_mapping: d11_standard
-breakpoint_group: fast_responsive_image
+breakpoint_group: media_entity_responsive_image
 fallback_image_style: d8_standard
