--- a/config/install/responsive_image.styles.d3_traditional.yml
+++ b/config/install/responsive_image.styles.d3_traditional.yml
@@ -8,14 +8,14 @@ id: d3_traditional
 label: 'Display 3 responsive traditional 4:3'
 image_style_mappings:
   -
-    breakpoint_id: fast_responsive_image.screen-xs-max
+    breakpoint_id: media_entity_responsive_image.screen-xs-max
     multiplier: 1x
     image_mapping_type: image_style
     image_mapping: d8_traditional
   -
-    breakpoint_id: fast_responsive_image.screen-sm-min
+    breakpoint_id: media_entity_responsive_image.screen-sm-min
     multiplier: 1x
     image_mapping_type: image_style
     image_mapping: d3_traditional
-breakpoint_group: fast_responsive_image
+breakpoint_group: media_entity_responsive_image
 fallback_image_style: d3_traditional
