--- a/config/install/responsive_image.styles.d8_square.yml
+++ b/config/install/responsive_image.styles.d8_square.yml
@@ -6,5 +6,5 @@ dependencies:
 id: d8_square
 label: 'Display 8 responsive square 1:1'
 image_style_mappings: {  }
-breakpoint_group: fast_responsive_image
+breakpoint_group: media_entity_responsive_image
 fallback_image_style: d8_square
