--- a/config/install/responsive_image.styles.d8_standard.yml
+++ b/config/install/responsive_image.styles.d8_standard.yml
@@ -6,5 +6,5 @@ dependencies:
 id: d8_standard
 label: 'Display 8 responsive standard 16:9'
 image_style_mappings: {  }
-breakpoint_group: fast_responsive_image
+breakpoint_group: media_entity_responsive_image
 fallback_image_style: d8_standard
