--- a/media_entity_responsive_image.info.yml
+++ b/media_entity_responsive_image.info.yml
@@ -1,12 +1,9 @@
-name: Fast responsive image
+name: Media entity responsive image
 type: module
 description: Provides an image media bundle configured with a preset of responsive image styles and view modes
 core: 8.x
-package: Images
+package: Media
 dependencies:
-  - blazy
-  - focal_point
-  - image
-  - responsive_image
-  - media_entity
   - media_entity_image
+  - responsive_image
+  - focal_point
