--- a/composer.json
+++ b/composer.json
@@ -10,5 +10,9 @@
     "issues": "https://www.drupal.org/project/issues/media_entity_responsive_image",
     "source": "http://cgit.drupalcode.org/media_entity_responsive_image"
   },
-  "require": { }
+  "require": {
+    "drupal/core": "~8.1",
+    "drupal/media_entity": "~8.1.0",
+    "drupal/focal_point": "~8.1.0"
+  }
 }
