--- a/config/install/core.entity_view_display.media.image.se2e_4_1.yml
+++ b/config/install/core.entity_view_display.media.image.se2e_4_1.yml
@@ -19,6 +19,7 @@ content:
     settings:
       responsive_image_style: de2e_4_1
       image_link: ''
+    third_party_settings: {  }
     type: responsive_image
     region: content
 hidden:
