--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
   },
   "require": {
     "drupal/core": "~8.1",
-    "drupal/media_entity": "~8.1.0",
-    "drupal/focal_point": "~8.1.0"
+    "drupal/media_entity": "~1.0 || ~8.1.0",
+    "drupal/focal_point": "~1.0 || ~8.1.0"
   }
 }
